--- a/Styles.css
+++ b/Styles.css
@@ -16,6 +16,8 @@ body {
 nav {
   padding: 64px;
   grid-area: timeline;
+
+  overflow-y: scroll;
 }
 .memory {
   display: flex;
@@ -44,7 +46,36 @@ nav {
   line-height: 28px;
 }
 
-aside{
+aside {
   grid-area: profile;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  background-image: url("./assets/background.svg");
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: 100%;
 
+  border-right: 1px solid;
+  border-image: linear-gradient(#727272, #2c2c31) 1;
+}
+
+aside img:nth-child(2) {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+
+  border: 4px solid transparent;
+  background: linear-gradient(#d39e33, #ed5636, #633bbc) padding-box,
+    linear-gradient(260deg, #d39e33, #ed5636, #633bbc) border-box;
+}
+aside p {
+  font-size: 32px;
+  text-align: center;
+}
+aside span {
+  font-size: 12px;
+  color: #9e9ea0;
 }
